--- a/NHibernate.Caches.Elasticache/packages.config
+++ b/NHibernate.Caches.Elasticache/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK" version="2.0.13.1" targetFramework="net40" />
+  <package id="Amazon.ElastiCacheCluster" version="1.0.0.0" targetFramework="net40" />
+  <package id="AWSSDK" version="2.3.13.1" targetFramework="net40" />
   <package id="EnyimMemcached" version="2.12" targetFramework="net45" />
-  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
+  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
