--- a/NHibernate.Caches.Elasticache/app.config
+++ b/NHibernate.Caches.Elasticache/app.config
@@ -4,7 +4,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Enyim.Caching" publicKeyToken="cec98615db04012e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.13.0.0" newVersion="2.13.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.16.0.0" newVersion="2.16.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -17,4 +17,7 @@ that is bundled with the nuget package under the tools folder.
 		<add key="AWSProfileName" value="" />
 -->
   </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 </configuration>
